fixed position tabs and trade card wrapping issue for connected traders

--- a/src/components/Dashboard/PositionsTabs/PositionsTabs.scss
+++ b/src/components/Dashboard/PositionsTabs/PositionsTabs.scss
@@ -25,11 +25,6 @@
           padding: 0;
           text-transform: capitalize;
 
-          &:last-child {
-            max-width: 100px;
-            min-width: 100px;
-          }
-
           &:focus {
             outline: none;
           }
