--- a/src/components/TraderCard/TraderCard.scss
+++ b/src/components/TraderCard/TraderCard.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   margin: 30px 21px 30px 0;
   min-height: 300px;
-  width: 405px;
+  width: 400px;
 
   .traderCardHeader {
     border-bottom: 1px solid $borderColor;
